@@ -1,3 +1,9 @@
+Tue Aug 05 11:11:39 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/searchconnection.py,xappy/unittests/similar.py: Add test
+	  case for similarity search with a non-indexed document, and fix
+	  the remaining problems which that threw up.
+
 Tue Aug 05 09:35:16 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/unittests/range_speed.py: Fix test to make problem more
